cmake_minimum_required(VERSION 3.11.0)

project(Module_2 VERSION 0.1.0)

add_subdirectory(T2_5_Bank_account)
add_subdirectory(T2_7_Vector_of_strings)
add_subdirectory(T2_1_First_touch)
add_subdirectory(T2_4_Dog_class)
add_subdirectory(T2_6_Vectors)
add_subdirectory(T2_3_Simple_class)
add_subdirectory(T2_2_Rectangle)